[package]
name = "adventure_land_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
futures-util = { version = "0.3.31", features = ["sink"] }
reqwest = { version = "0.12.9", features = ["multipart", "cookies"] }
reqwest-websocket = "0.4.3"
rust_socketio = "0.6.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
